# signalscrambling

./: .gitignore  .gitmodules  CMakeLists.txt
include/: config.h  dsd.h
src/: dsd_audio.c  dsd_file.c  dsd_main.c  dsd_serial.c
test/gtest/: CMakeLists.txt
